--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.14.0",
     "jquery": "^3.1.1",
     "rxjs": "5.0.0-beta.12",
+    "serve-favicon": "^2.3.0",
     "tether": "^1.3.7",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
