--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
+    "mongoose": "^4.6.7",
     "rxjs": "5.0.0-beta.12",
     "serve-favicon": "^2.3.0",
     "tether": "^1.3.7",
