--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jquery": "^3.1.1",
+    "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
