--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "serve-favicon": "^2.3.0",
     "tether": "^1.3.7",
     "ts-helpers": "^1.1.1",
+    "vhost": "^3.0.2",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
